[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lxcf"
version = "0.1.0"
description = "Lightweight eXtensible Channel Format — IRC-style messaging over LXMF/Reticulum"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["rns", "lxmf"]

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]

[tool.setuptools.packages.find]
include = ["lxcf*"]

[tool.pytest.ini_options]
markers = ["live: live runtime tests (require rnsd)"]
addopts = "-m 'not live'"
